# hermes3d

./: .gitignore  .hgignore  CMake.vars.Debian  CMake.vars.felina  CMake.vars.sample  CMakeLists.txt  README
cmake/: FindACML.cmake  FindBLAS.cmake  FindFORTRAN.cmake  FindGLUT.cmake  FindJUDY.cmake  FindLAPACK.cmake  FindMPI.cmake  FindPARDISO.cmake  FindPETSC.cmake  FindSLEPC.cmake  FindUMFPACK.cmake  FindX11.cmake  FindZLIB.cmake
common/: array.h  arrayptr.h  bitarray.h  callstack.cc  callstack.h  error.cc  error.h  freqmap.h  hashmap.h  map.h  maphs.h  mapint.h  mapord.h  timer.cc  timer.h  trace.cc  trace.h  utils.cc  utils.h
doc/: CMakeLists.txt  Doxyfile.cmake  conf.py.cmake  examples.rst  install.rst
doc/examples/: elastostatics.rst
examples/: CMakeLists.txt
examples/elastostatics/: CMakeLists.txt  main.cc
examples/heat-conduction/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  asmlist.h  common.h  config.h.cmake  curved.cc  curved.h  determinant.h  discretization.cc  discretization.h  eigensolver.h  filter.cc  filter.h  forms.cc  forms.h  function.cc  function.h  hermes3d.h  linproblem.cc  linproblem.h  linsolver.cc  linsolver.h  matrix.cc  matrix.h  mesh.cc  mesh.h  meshloader.h  norm.cc  norm.h  order.h  output.cc  output.h  precalc.cc  precalc.h  qsort.cc  quad.h  quadcheb.cc  quadcheb.h  quadstd.cc  quadstd.h  refdomain.cc  (+17 more)
src/adapt/: h1.cc  h1.h  h1proj.cc  h1proj.h  proj.cc  proj.h
src/eigensolver/: slepc.cc  slepc.h
src/integrals/: h1.h  hcurl.h
src/linsolver/: pardiso.cc  pardiso.h  petsc.cc  petsc.h  umfpack.cc  umfpack.h
src/loader/: hdf5.cc  hdf5.h  mesh3d.cc  mesh3d.h
src/output/: gmsh.cc  gmsh.h  graph.cc  graph.h  vtk.cc  vtk.h
src/shapeset/: common.h  h1lobattohex.cc  h1lobattohex.h  h1lobattotetra.cc  h1lobattotetra.h  h1lobattotetradx.cc  h1lobattotetrady.cc  h1lobattotetradz.cc  h1sinhex.cc  h1sinhex.h  hcurllobattohex.cc  hcurllobattohex.h  hex.h  lobatto.cc  lobatto.h  refmapss.cc  refmapss.h  tetra.h
src/space/: h1.cc  h1.h  hcurl.cc  hcurl.h
tests/: CMake.common  CMakeLists.txt  common.cmake
tests/adapt/: CMakeLists.txt
tests/adapt/h1-simple/: CMakeLists.txt  main.cc
tests/adapt/projection/: CMakeLists.txt  main.cc
tests/calc/: CMakeLists.txt
tests/calc/hex-h1/: CMake.vars  CMakeLists.txt  hex.cc
tests/calc/hex-h1-1face/: CMakeLists.txt  config.h  main.cc
tests/calc/hex-h1-dirichlet/: CMake.vars  CMakeLists.txt  hex-dirichlet.cc
tests/calc/hex-h1-eigen-problem/: CMakeLists.txt  config.h.cmake  hex-eigen-problem.cc
tests/calc/hex-h1-neumann/: CMakeLists.txt  hex-neumann.cc
tests/calc/hex-h1-newton/: CMakeLists.txt  hex-newton.cc
tests/calc/hex-h1-sys/: CMakeLists.txt  main.cc
tests/calc/hex-h1-sys-coupled/: CMakeLists.txt  main.cc
tests/calc/hex-h1-sys-dirichlet/: CMakeLists.txt  main.cc
tests/calc/hex-hcurl/: CMake.vars  CMakeLists.txt  hex-hcurl.cc
tests/calc/hex-hcurl-cplx/: CMakeLists.txt  config.h.cmake  hex-hcurl-cplx.cc
tests/calc/hex-hcurl-imped/: CMakeLists.txt  config.h.cmake  hex-hcurl-imped.cc
tests/calc/tetra-h1/: CMakeLists.txt  tetra.cc
tests/calc/tetra-h1-dirichlet/: CMakeLists.txt  tetra-dirichlet.cc
tests/calc/tetra-h1-electrodes/: CMakeLists.txt  electrodes.cc
tests/calc/tetra-h1-neumann/: CMakeLists.txt  tetra-neumann.cc
tests/calc/tetra-h1-neumann-ref/: CMakeLists.txt  tetra-neumann.cc
tests/calc/tetra-h1-newton/: CMakeLists.txt  tetra-newton.cc
tests/calc/tetra-h1-newton-ref/: CMakeLists.txt  tetra-newton.cc
tests/eigen-solvers/: CMakeLists.txt  main.cc
tests/hang-nodes/: CMake.tests.hex  CMakeLists.txt
tests/hang-nodes/hex-h1/: CMake.vars  CMakeLists.txt  hang-nodes-cont.cc
tests/hang-nodes/hex-hcurl/: CMakeLists.txt  hang-nodes-cont.cc
tests/integrals/: CMakeLists.txt
tests/integrals/h1-hex-int/: CMakeLists.txt  h1-hex-int.cc
tests/integrals/h1-hex-real/: CMakeLists.txt  h1-hex-real.cc
tests/integrals/hcurl/: CMakeLists.txt
tests/integrals/hcurl/integ-norm/: CMake.vars  config.h.cmake  main.cc
tests/integrals/hex-h1-int/: CMake.vars  CMakeLists.txt  config.h.cmake  h1-hex-int.cc
tests/integrals/hex-h1-real/: CMake.vars  CMakeLists.txt  h1-hex-real.cc
tests/integrals/hex-hcurl/: CMakeLists.txt
tests/integrals/hex-hcurl/integ-norm/: CMakeLists.txt  main.cc
tests/judy-templates/: CMakeLists.txt  main.cc
tests/linear-solvers/: CMakeLists.txt  config.h.cmake  main.cc
tests/mesh/: CMakeLists.txt
tests/mesh-loaders/: CMakeLists.txt
tests/mesh-loaders/dump/: hex1.dump  hex2.dump  hex4.dump  hex8.dump  tetra1.dump  tetra2.dump  tetra4.dump  tetra8.dump
tests/mesh-loaders/hdf5/: CMakeLists.txt  hdf5dump.cc
tests/mesh-loaders/mesh3d/: CMakeLists.txt  mesh3ddump.cc
tests/mesh/copy/: CMakeLists.txt  mesh-copy.cc
tests/mesh/copy/dump/: 1-2.dump  1-3.dump  base-1.dump  base-2.dump  base-27.dump  base-4.dump  base-8.dump
tests/mesh/refinements/: CMakeLists.txt  refinements.cc
tests/mesh/regularize/: CMakeLists.txt  main.cc
tests/mesh/regularize/dump/: 1.dump  2.dump
tests/nrm/: CMakeLists.txt  main.cc
tests/orders/: CMakeLists.txt  main.cc
tests/output/: CMakeLists.txt  main.cc
tests/qorder/: CMakeLists.txt
tests/qorder/exact-solution/: CMakeLists.txt  main.cc
tests/qorder/precalc/: CMakeLists.txt  main.cc
tests/qorder/precalc/dump/: hex1-sc
tests/qorder/solution/: CMakeLists.txt  main.cc
tests/quadrature/: CMakeLists.txt  main.cc
tests/refmap/: CMakeLists.txt  main.cc
tests/shapeset/: CMakeLists.txt
tests/shapeset/hex-h1/: CMakeLists.txt  common.h  cont.cc  grad.cc  graddir.cc  lindep.cc  main.cc  zero.cc
tests/shapeset/hex-h1-lobatto/: CMakeLists.txt  common.h  cont.cc  grad.cc  graddir.cc  lindep.cc  main.cc  zero.cc
tests/shapeset/hex-h1-lobatto-ced/: CMake.vars  CMakeLists.txt  main.cc
tests/shapeset/hex-hcurl/: CMakeLists.txt  cont.cc  grad.cc  graddir.cc  lindep.cc  main.cc  zero.cc
tests/shapeset/hex-hcurl-lobatto/: CMake.vars  CMakeLists.txt  common.h  cont.cc  grad.cc  graddir.cc  lindep.cc  main.cc  zero.cc
tests/timer/: CMake.vars  CMakeLists.txt  main.cc
(+11 files in other folders)
