#
# CMake for tests
#
include(CMake.common)

add_subdirectory(calc)
add_subdirectory(eigen-solvers)
add_subdirectory(hang-nodes)
add_subdirectory(integrals)
add_subdirectory(judy-templates)
add_subdirectory(linear-solvers)
add_subdirectory(mesh)
add_subdirectory(mesh-loaders)
add_subdirectory(orders)
add_subdirectory(qorder)
add_subdirectory(quadrature)
add_subdirectory(refmap)
add_subdirectory(shapeset)
add_subdirectory(timer)

